themes/2020/assets/css/style.css
/* ... */
body {
    /*font: 100 1em "Source Sans Pro", sans-serif;*/
    font: 300 1em/1.4 "Montserrat", sans-serif;
    -webkit-font-smoothing: antialiased;

    color: var(--body-text);
    background: var(--body-fill);
}

h1, h2, h3, h4, h5, h6 {
    font: 1em "Poppins", sans-serif;

    color: var(--active-text);
}

h1 {
    font-size: 1.2em;
    font-variant: all-small-caps;
    text-align: center;

    color: var(--body-focus);
}

h2 {
    margin-bottom: 1em;
    font-size: 2.5em;
    text-align: center;
}

h3 {
    font-size: 1.5em;
}

h4 {
    font-size: 1em;
}

h5 {
    margin-bottom: 1.5em;

    font: 200 80%/1.2 "Poppins", sans-serif;

    color: inherit;
}

a, a:focus, a:hover {
    text-decoration: none;

    color: var(--body-focus);
}

a {
    color: var(--active-text);
}

hr {
    height: 1px;
    margin: 0.5em 0;
    opacity: 1;
    border: none;
    background: var(--highlight);
}

label {
    margin: 0 1ex;
    vertical-align: middle;

    font: 300 1em "Poppins", sans-serif;

    color: var(--body-text);
}

label:focus-within {
    color: var(--active-text);
}

form label:before {
    content: "";
    display: inline-block;
    width: 1.5em;
    text-align: end;
}

form label {
    display: block;
    width: auto;
    font-size: smaller;
    text-align: start;
}

form input, form textarea, form select, form button {
    margin: 0.2em 0;
    font-size: larger;
}

input, textarea, select, button, a.btn {
    width: 100%;
    padding: 0.5em 1em;
    letter-spacing: 1px;

    color: var(--active-text);
    border: 1px solid rgba(236, 239, 241, 0.07);
    border-radius: var(--internal-size);
    background: transparent;
    box-shadow: 0 0 8px var(--shadow);
}

input::placeholder, textarea::placeholder {
    color: var(--body-text);
}

input:hover, textarea:hover, select:hover {
    border-color: var(--control-contrast);
    background: var(--highlight);
}

textarea {
    height: 6em;
}

select * {
    background: var(--body-contrast);
}

button, a.btn {
    display: inline-block;
    width: auto;

    font-size: 1em;
    color: var(--control-text);

    border: 2px solid transparent;
    border-radius: var(--group-size);
    background: var(--control-fill);
}

button, a.btn, button *, a.btn * {
    cursor: pointer;
}

button:hover, a.btn:hover {
    color: var(--active-text);
    background: var(--body-focus);
}

section:target .cta {
    border-color: var(--control-contrast) !important;
}

form button {
    width: 100%;
    border-radius: var(--internal-size);
    background: var(--control-contrast);
}

form button:hover {
    background: var(--body-focus);
}

input, textarea, select, button, a, label, :target, :focus, :hover, :active {
    outline: none;
    transition: all .38s ease-in 0s;
}

blockquote {
    padding: 1em;
    color: var(--active-text);
    border-left: 1ex solid var(--panel-contrast);
    border-radius: var(--internal-size);
    background: var(--panel-fill);
}

blockquote *:last-child {
    margin-bottom: 0;
}

blockquote *:first-child {
    margin-top: 0;
}

strong, b, em, i {
    color: var(--active-text);
}

section {
    padding: 6em 0;
}

section.lit {
    background: var(--body-contrast);
}

@media (max-width: 768px) {
    section {
        padding: 4em 0;
    }
}

@media (max-width: 576px) {
    .box {
        padding: 1em;
    }
}

/*=================================================================
  Behaviour
 *================================================================*/

[scroll-behavior=smooth] {
    scroll-behavior: smooth;
}


::-moz-selection, ::selection {
    color: var(--active-text);
    background: var(--control-contrast);
}

/*=================================================================
  Utilities
 *================================================================*/

html:not([data-os="Windows"]) .os-windows,
html:not([data-os="Mac OS"]) .os-macos,
html:not([data-os="Linux"]) .os-linux,
html:not([data-os="iOS"]) .os-ios,
html:not([data-os="Android"]) .os-android {
    display: none !important;
}

a.btn-transparent {
    color: var(--active-text);
    border: 1px solid var(--control-fill);
    background: transparent;
}

a.btn-transparent:hover,
a.btn-transparent:focus {
    border: 1px solid transparent;
    background: var(--control-fill);
}

.code {
    font-family: "Source Code Pro", monospace;
}

.error, .info {
    font-weight: 500;
    color: #BB2D3B;
    border-radius: var(--internal-size);
}

p.error, p.info {
    padding: 0.2em;
    text-align: center;
    background: #6A1A21;
}

.error:empty, .info:empty {
    display: none;
}

.info {
    color: #198754;
    background: #0C4128;
}

.box {
    position: relative;
    margin: auto;
    padding: 2em;
    border-radius: var(--join-size);
    background: var(--panel-fill);
    box-shadow: 0 0 var(--join-size) var(--shadow);
}

@media (max-width: 576px) {
    .box {
        padding: 1em;
    }
}

.box p.error, .box p.info {
    position: absolute;
    right: 0;
    bottom: 0;
    left: 0;
    margin: 0.5em;
    font-size: smaller;
    color: var(--active-text);
    background: var(--body-fill);
}

.box > hr {
    margin-right: -2em;
    margin-left: -2em;
}

.box > i {
    display: block;
    margin: 0 auto 0;
    font-size: 3em;
    color: var(--control-contrast);
}

.box > i.fa-xs {
    font-size: 0.75em;
    line-height: 1.2;
}

.box input {
    padding: 0.5em 1.5em;
    border: none;
    border-radius: var(--group-size);
    background: var(--highlight);
}

.caption {
    font-size: smaller;
    color: var(--body-focus);
}

.caption a {
    text-decoration: underline;
    color: inherit;
}

.caption a:focus,
.caption a:hover {
    color: var(--active-text);
}

/* Ensure empty fixed-width font-awesome icons still take their fixed size. */
.fa-fw::after {
    content: " ";
    white-space: pre;
}
/* ... */

